# LLMC

./: ..gitignore.un~  .gitignore  .gitignore~  UAC.txt  UAC_set_freq.txt  bus_hound_dma.txt  bus_hound_nodma.txt  ~$B_UAC_notes.docx
LLMC_DAC/: .cproject  .mxproject  .project  AI_prompts.txt  CLAUDE.md  CMakeLists.txt  LLMC_DAC Debug.cfg  LLMC_DAC Debug.launch  LLMC_DAC.ioc  STM32H7B0VBTX_FLASH.ld  app.ld  bash.exe.stackdump  bushound_release.txt  cubeprogrammer_h7.prog
LLMC_DAC/.claude/: settings.local.json
LLMC_DAC/Core/Inc/: Config_user_define.h  FreeRTOSConfig.h  async_i2c.h  main.h  sim.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  touch_HR2046.h
LLMC_DAC/Core/Inc/Audio/: audio_DSP.h  audio_buffers.h  audio_player.h  audio_settings.h  decoder.h  decoder_pool.h  memory.txt  mp3utils.h  playlist.h  precise_counter.h  wav.h
LLMC_DAC/Core/Inc/Backup/: Config_user_define.h.bak  FreeRTOSConfig.h.bak  main.h.bak  stm32h7xx_hal_conf.h.bak  stm32h7xx_it.h.bak  touch_HR2046.h.bak
LLMC_DAC/Core/Inc/GUI/: LVGL_GUI.h  LVGL_toast.h  lv_simple_file_explorer_unicode.h
LLMC_DAC/Core/Inc/GUI/assets/: LLMC_LVGL_assets.h
LLMC_DAC/Core/Inc/encoding/: utf_convert.h
LLMC_DAC/Core/Src/: Config_user_define.c  async_i2c.c  freertos.c  main.c  sim.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  syscalls.c  system_stm32h7xx.c  touch_HR2046.c
LLMC_DAC/Core/Src/Audio/: audio_DSP.c  audio_DSP_EQ.c  audio_DSP_compressor.c  audio_DSP_preset.c  audio_DSP_resampler.c  audio_DSP_reverb.c  audio_DSP_test.c  audio_filter_params.c  audio_inputs.c  audio_outputs.c  audio_player.c  audio_settings.c  decoder_flac.c  decoder_mp3.c  decoder_pool.c  decoder_wav_dr.c  mp3utils.c  playlist.c  precise_counter.c  wav.c
LLMC_DAC/Core/Src/Backup/: Config_user_define.c.bak  freertos.c.bak  main.c.bak  stm32h7xx_hal_msp.c.bak  stm32h7xx_hal_timebase_tim.c.bak  stm32h7xx_it.c.bak  system_stm32h7xx.c.bak  touch_HR2046.c.bak
LLMC_DAC/Core/Src/GUI/: LVGL_GUI.c  LVGL_GUI_dsp.c  LVGL_GUI_player.c  LVGL_GUI_settings.c  LVGL_GUI_signal_path.c  LVGL_GUI_volume_control.c  LVGL_flush.c  LVGL_input.c  LVGL_toast.c  lv_simple_file_explorer_unicode.c
LLMC_DAC/Core/Src/GUI/assets/: LLMC_LVGL_assets.c  back_img_player_1.c  back_img_settings_1.c  btn_img_3.c  character_icon.c  character_icon_small_transp.c  img_btn_loop.c  img_btn_next.c  img_btn_pause.c  img_btn_play.c  img_btn_prev.c  img_btn_rnd.c  img_slider_knob.c  warning_img.c  (+2 more)
LLMC_DAC/Core/Src/encoding/: utf_convert.c
LLMC_DAC/Debug/: LLMC_DAC.map  sources.mk
LLMC_DAC/Debug/Core/Src/: Config_user_define.su  async_i2c.d  freertos.su  main.su  stm32h7xx_hal_msp.su  stm32h7xx_hal_timebase_tim.su  stm32h7xx_it.su  subdir.mk  system_stm32h7xx.d  system_stm32h7xx.su  touch_HR2046.su
LLMC_DAC/Debug/Core/Startup/: subdir.mk
LLMC_DAC/Debug/Drivers/ButtonDebouncer/: ButtonDebouncer.d  ButtonDebouncer.su  subdir.mk
LLMC_DAC/Debug/Drivers/Config/: Config.d  Config.su  subdir.mk
LLMC_DAC/Debug/Drivers/PCM1792/: PCM179x.su  subdir.mk
LLMC_DAC/Debug/Drivers/Profiler/: profiler.d  profiler.su  subdir.mk
LLMC_DAC/Debug/Drivers/RotEnc/: RotEnc.su  subdir.mk
LLMC_DAC/Debug/Drivers/SD_card/: SD_card.d  SD_card.su  subdir.mk
LLMC_DAC/Debug/Drivers/TLV320ADCx120/: TLV320ADCx120.d  TLV320ADCx120.su  subdir.mk
LLMC_DAC/Debug/Drivers/double_buffer/: double_buffer.su  subdir.mk
LLMC_DAC/Debug/Drivers/kfifo_DMA/: kfifo_DMA.d  subdir.mk
LLMC_DAC/Debug/FATFS/App/: fatfs.d  subdir.mk
LLMC_DAC/Debug/MyUSBClass/: MyUSB.su  subdir.mk
LLMC_DAC/Debug/MyUSBDevice/App/: subdir.mk  usb_device.su  usbd_audio_if.su  usbd_desc.d  usbd_desc.su  usbd_storage_if.d  usbd_storage_if.su
LLMC_DAC/Drivers/ButtonDebouncer/: ButtonDebouncer.c  ButtonDebouncer.h
LLMC_DAC/Drivers/Config/: Config.c  Config.h
LLMC_DAC/Drivers/PCM1792/: PCM179x.c  PCM179x.h  PCM179x_I2C.c
LLMC_DAC/Drivers/Profiler/: profiler.c  profiler.h
LLMC_DAC/Drivers/RotEnc/: RotEnc.c  RotEnc.h
LLMC_DAC/Drivers/SD_card/: SD_card.c  SD_card.h
LLMC_DAC/Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_pcd.c  stm32h7xx_hal_rcc.c  stm32h7xx_ll_usb.c
LLMC_DAC/Drivers/TLV320ADCx120/: TLV320ADCx120.c  TLV320ADCx120.h
LLMC_DAC/Drivers/double_buffer/: double_buffer.c  double_buffer.h
LLMC_DAC/Drivers/kfifo_DMA/: kfifo_DMA.c  kfifo_DMA.h
LLMC_DAC/FATFS/App/: fatfs.c  fatfs.h
LLMC_DAC/MyUSBClass/: MyUSB.c  MyUSB.h
LLMC_DAC/MyUSBClass/MY_MSC/Inc/: usbd_msc.h  usbd_msc_data.h
LLMC_DAC/MyUSBClass/MY_MSC/Src/: usbd_msc.c
LLMC_DAC/MyUSBClass/MY_UAC1_0/Inc/: usbd_audio.h
LLMC_DAC/MyUSBClass/MY_UAC1_0/Src/: my_usbd_audio.c
LLMC_DAC/MyUSBDevice/App/: usb_device.c  usbd_audio_if.c  usbd_desc.c  usbd_storage_if.c
LLMC_DAC/Release/: LLMC_DAC.elf  LLMC_DAC.map  makefile  objects.list
LLMC_DAC/Release/Core/Src/: Config_user_define.d  Config_user_define.su  freertos.d  freertos.su  main.d  main.su  sim.d  stm32h7xx_hal_msp.d  stm32h7xx_hal_msp.su  stm32h7xx_hal_timebase_tim.d  stm32h7xx_hal_timebase_tim.su  stm32h7xx_it.d  stm32h7xx_it.su  subdir.mk  system_stm32h7xx.su  touch_HR2046.d  touch_HR2046.su
LLMC_DAC/Release/Core/Startup/: subdir.mk
LLMC_DAC/Release/Drivers/ButtonDebouncer/: ButtonDebouncer.su  subdir.mk
LLMC_DAC/Release/Drivers/Config/: Config.su  subdir.mk
LLMC_DAC/Release/Drivers/PCM1792/: PCM179x.d  PCM179x.su  PCM179x_I2C.d  PCM179x_I2C.su  subdir.mk
LLMC_DAC/Release/Drivers/Profiler/: profiler.su  subdir.mk
LLMC_DAC/Release/Drivers/RotEnc/: RotEnc.d  RotEnc.su  subdir.mk
LLMC_DAC/Release/Drivers/SD_card/: SD_card.su  subdir.mk
LLMC_DAC/Release/Drivers/TLV320ADCx120/: TLV320ADCx120.su  subdir.mk
LLMC_DAC/Release/Drivers/double_buffer/: double_buffer.d  double_buffer.su  subdir.mk
LLMC_DAC/Release/Drivers/kfifo_DMA/: kfifo_DMA.su  subdir.mk
LLMC_DAC/Release/FATFS/App/: subdir.mk
LLMC_DAC/Release/MyUSBClass/: MyUSB.d  MyUSB.su  subdir.mk
LLMC_DAC/Release/MyUSBDevice/App/: subdir.mk  usb_device.d  usbd_audio_if.d  usbd_audio_if.su  usbd_desc.su  usbd_storage_if.su
LLMC_DAC/cmake/: gcc-arm-none-eabi.cmake
LLMC_DAC/cmake/stm32cubemx/: CMakeLists.txt
(+414 files in other folders)
